--- a/WorldEditor.ini
+++ b/WorldEditor.ini
@@ -12,13 +12,18 @@ Capa3=1
 Capa4=0
 ControlAutomatico=1
 Grilla=0
-LastPos=50-50
+LastPos=56-82
 NPCs=1
 Objetos=1
 Translados=1
-Triggers=1
+Triggers=0
 
 [PATH]
+Audio=..\Cliente\Audio\
+Dats=..\Server\Dat\
+Graficos=..\Cliente\Graficos\
+Init=..\Cliente\INIT\
+Minimapas=..\Cliente\Graficos\Minimapa\
 UltimoMapa=
 
 [RENDER]
