--- a/GrhIndex/indices.ini
+++ b/GrhIndex/indices.ini
@@ -662,13 +662,13 @@ Ancho=0
 Alto=0
 Capa=1
 [REFERENCIA110]
-Nombre=(Animaciï¿½n)(AGUA)(CASCADA ROCA)
+Nombre=(Animaciín)(AGUA)(CASCADA ROCA)
 GrhIndice=99
 Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA111]
-Nombre=(Animaciï¿½n)(Barco Pirata)
+Nombre=(Animaciín)(Barco Pirata)
 GrhIndice=18274
 Ancho=0
 Alto=0
@@ -823,13 +823,13 @@ Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA137]
-Nombre=(Animaciï¿½n)(AGUA)
+Nombre=(Animaciín)(AGUA)
 GrhIndice=1505
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA138]
-Nombre=(Animaciï¿½n)(FOGATA)
+Nombre=(Animaciín)(FOGATA)
 GrhIndice=1521
 Ancho=0
 Alto=0
@@ -853,19 +853,19 @@ Ancho=0
 Alto=0
 Capa=1
 [REFERENCIA142]
-Nombre=(MONTAï¿½A)1
+Nombre=(MONTAíA)1
 GrhIndice=7234
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA143]
-Nombre=(MONTAï¿½A 2)1
+Nombre=(MONTAíA 2)1
 GrhIndice=7250
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA144]
-Nombre=(MONTAï¿½A 3)1
+Nombre=(MONTAíA 3)1
 GrhIndice=7266
 Ancho=4
 Alto=4
@@ -2728,7 +2728,7 @@ Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA454]
-Nombre=Animaciï¿½n) Casa(Herreria)  (HORNO)
+Nombre=Animaciín) Casa(Herreria)  (HORNO)
 GrhIndice=30
 Ancho=0
 Alto=0
@@ -2776,7 +2776,7 @@ Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA462]
-Nombre=(Animaciï¿½n) Casa(Carpa) ( Humo)
+Nombre=(Animaciín) Casa(Carpa) ( Humo)
 GrhIndice=49
 Ancho=1
 Alto=1
@@ -3070,7 +3070,7 @@ Ancho=0
 Alto=0
 Capa=1
 [REFERENCIA509]
-Nombre=Casa(Pescaderia)(Porta Caï¿½as)
+Nombre=Casa(Pescaderia)(Porta Caías)
 GrhIndice=4883
 Ancho=0
 Alto=0
@@ -3442,7 +3442,7 @@ Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA571]
-Nombre=Maniquï¿½
+Nombre=Maniquí
 GrhIndice=4500
 Ancho=1
 Alto=1
@@ -3736,7 +3736,7 @@ Ancho=2
 Alto=2
 Capa=2
 [REFERENCIA620]
-Nombre=(Animaciï¿½n)Agua Clarita
+Nombre=(Animaciín)Agua Clarita
 GrhIndice=5665
 Ancho=4
 Alto=4
@@ -4635,115 +4635,115 @@ Ancho=0
 Alto=0
 Capa=1
 [REFERENCIA768]
-Nombre=(Montaï¿½a ZeuS)(Costado)
+Nombre=(Montaía ZeuS)(Costado)
 GrhIndice=8201
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA769]
-Nombre=(Montaï¿½a ZeuS)(Costado)
+Nombre=(Montaía ZeuS)(Costado)
 GrhIndice=8217
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA770]
-Nombre=(Montaï¿½a ZeuS)(Piso Der)
+Nombre=(Montaía ZeuS)(Piso Der)
 GrhIndice=8233
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA771]
-Nombre=(Montaï¿½a ZeuS)(Piso Der) c/Pared
+Nombre=(Montaía ZeuS)(Piso Der) c/Pared
 GrhIndice=8249
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA772]
-Nombre=(Montaï¿½a ZeuS)(Piso Izq)
+Nombre=(Montaía ZeuS)(Piso Izq)
 GrhIndice=8264
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA773]
-Nombre=(Montaï¿½a ZeuS)(Piso Izqr) c/Pared
+Nombre=(Montaía ZeuS)(Piso Izqr) c/Pared
 GrhIndice=8281
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA774]
-Nombre=(Montaï¿½a ZeuS)(Entrada)
+Nombre=(Montaía ZeuS)(Entrada)
 GrhIndice=8297
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA775]
-Nombre=(Montaï¿½a ZeuS)(Pared Der)
+Nombre=(Montaía ZeuS)(Pared Der)
 GrhIndice=8313
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA776]
-Nombre=(Montaï¿½a ZeuS)(Pared Izq)
+Nombre=(Montaía ZeuS)(Pared Izq)
 GrhIndice=8329
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA777]
-Nombre=(Montaï¿½a ZeuS)(Pared Der) centro
+Nombre=(Montaía ZeuS)(Pared Der) centro
 GrhIndice=8345
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA778]
-Nombre=(Montaï¿½a ZeuS)(Pared Izq) cost
+Nombre=(Montaía ZeuS)(Pared Izq) cost
 GrhIndice=8377
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA779]
-Nombre=(Montaï¿½a ZeuS)(Pared)
+Nombre=(Montaía ZeuS)(Pared)
 GrhIndice=8393
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA780]
-Nombre=(Montaï¿½a ZeuS)(Piso)
+Nombre=(Montaía ZeuS)(Piso)
 GrhIndice=8409
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA781]
-Nombre=(Montaï¿½a ZeuS)(Piso centro) c/pared
+Nombre=(Montaía ZeuS)(Piso centro) c/pared
 GrhIndice=8425
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA782]
-Nombre=(Montaï¿½a ZeuS)(Piso centro) c/escalera
+Nombre=(Montaía ZeuS)(Piso centro) c/escalera
 GrhIndice=8441
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA783]
-Nombre=(Montaï¿½a ZeuS)(Piso centro) c/pared
+Nombre=(Montaía ZeuS)(Piso centro) c/pared
 GrhIndice=8457
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA784]
-Nombre=(Montaï¿½a ZeuS)(Piso centro) c/pared y esc
+Nombre=(Montaía ZeuS)(Piso centro) c/pared y esc
 GrhIndice=8473
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA785]
-Nombre=(Montaï¿½a ZeuS)(Piso centro) Esc
+Nombre=(Montaía ZeuS)(Piso centro) Esc
 GrhIndice=8489
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA786]
-Nombre=(Montaï¿½a ZeuS)(Piso centro) 
+Nombre=(Montaía ZeuS)(Piso centro) 
 GrhIndice=8505
 Ancho=4
 Alto=4
@@ -5217,19 +5217,19 @@ Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA862]
-Nombre=(PRD)(PARED) MONTAï¿½A
+Nombre=(PRD)(PARED) MONTAíA
 GrhIndice=1052
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA863]
-Nombre=(PRD)(PARED) MONTAï¿½A
+Nombre=(PRD)(PARED) MONTAíA
 GrhIndice=1068
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA864]
-Nombre=(PRD)(PARED) MONTAï¿½A
+Nombre=(PRD)(PARED) MONTAíA
 GrhIndice=1084
 Ancho=4
 Alto=4
@@ -6074,21 +6074,21 @@ Alto=0
 Capa=3
 
 [REFERENCIA983]
-Nombre=Telaraï¿½a (Izq.)
+Nombre=Telaraía (Izq.)
 GrhIndice=1494
 Ancho=0
 Alto=0
 Capa=3
 
 [REFERENCIA984]
-Nombre=Telaraï¿½a (Der.)
+Nombre=Telaraía (Der.)
 GrhIndice=1495
 Ancho=0
 Alto=0
 Capa=3
 
 [REFERENCIA985]
-Nombre=Telaraï¿½a (Medio)
+Nombre=Telaraía (Medio)
 GrhIndice=404
 Ancho=0
 Alto=0
